BuildHughes/translation-tool/inputs/source_meta/objects/Dynamic_Form_Field__c.object
<CustomObject>
    <fields>
        <fullName>Dynamic_Form_Setting__c</fullName>
        <label>Dynamic Form Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Text__c</fullName>
        <label>HTML_Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Supported_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static_Text__c</fullName>
        <label>Static Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TextFieldType__c</fullName>
        <label>TextFieldType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static Text</fullName>
                    <default>true</default>
                    <label>Static Text</label>
                </value>
                <value>
                    <fullName>HTML Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dynamic Form Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_2</fullName>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>HTML_Text__c</columns>
        <columns>Static_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All -- 2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Dynamic Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Form Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>